--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ html, body, #root {
 }
 
 .main-container {
-    background: url('./images/682.jpg');
+    background: url('./images/bg.jpg');
     background-size: cover;
     background-position: center;
 }
